# .github

./: .gitignore  ACCESSIBILITY.md  LICENSE  README.md
.github/: template-sync.yml
.github/workflows/: align_templates.yml  peloton.yml  template-sync.yml  template-update-notification.yml
peloton/: .gitignore  README.md  common.py  github_schema.py  populate.py  project_settings.md  query.py  requirements.txt  update-schema.sh  update_project.py
profile/: README.md  accessibility_statement.md  privacy_policy.md
templates/: .lycheeignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _templating_config.json  _templating_exclude.json  _templating_include.json  _templating_scripting.py  pyproject.toml  test_2.py
templates/benchmarks/: README.md  _asv_delegated_abc.py  asv.conf.json  asv_delegated.py  asv_delegated_REPONAME.py  bm_runner.py
templates/benchmarks/benchmarks/: __init__.py
templates/benchmarks/benchmarks/generate_data/: __init__.py
templates/benchmarks/custom_bms/: README.md  install.py  tracemallocbench.py
templates/github/workflows/: ci-benchmarks-report.yml  ci-benchmarks-run.yml  ci-benchmarks-validate.yml  ci-linkchecks.yml
